--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Silence - Learn with Confidence</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8QJF10M2SK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-8QJF10M2SK');
+    </script>
 </head>
 <body>
     <header>
@@ -23,8 +33,6 @@
            
             <button class="class-btn"onclick="window.location.href='class10.html';">class 10</button>
             <button class="ai-chat-btn" onclick="window.location.href='ai_chat.html';">AI Chat</button>
-
-       
         </div>
 
         <section class="about">
